# markov-typing

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README.md  generate.h  generate.hh  main.cc  main.cpp  probability_matrix.hh  stats.h  utils.hh
src/: curses_wrap.cc  curses_wrap.hh  generate.cc  generate.hh  io.cc  io.hh  main.cc  probability_matrix.cc  probability_matrix.hh  sentence.hh  stats.hh  utils.hh
src/qt_gui/: char_sets_picker.cc  char_sets_picker.hh  mainwindow.cc  mainwindow.hh  practice_area.cc  practice_area.hh
